Changed away for guests

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 					<div id="guests-side">
-						<div class="player-name" id="guests"><h3 class="player-h3">Away</h3></div>
+						<div class="player-name" id="guests"><h3 class="player-h3">Guests</h3></div>
 						<button class="player-score" id="guests-score">188</button>
 						<div class="score-buttons-div" id="guests-score-buttons">
 							<button class="score-buttons" id="plus-one-guests">+1</button>
