--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+			<link href="normalize.css" rel="stylesheet" type="text/css">
 			<link href="style.css" rel="stylesheet" type="text/css">
 		</head>
 		<body>
